[tool.poetry]
name = "repertoire"
version = "0.1.0"
description = "A release-oriented music server."
authors = ["azuline <azuline@riseup.net>"]
license = "AGPL-3.0"
packages = [
	{ include = "backend" },
]

[tool.poetry.scripts]
repertoire = "backend.__main__:run"

[tool.poetry.dependencies]
python = "^3.7"
selectolax = "^0.2.7"
python-dotenv = "^0.14.0"
requests = "^2.24"
tagfiles = "^0.3.1"
flask = "^1.1"
gevent = "^20.6"
daemonize = "^2.5"
huey = "^2.3"
yoyo-migrations = "^7.2"
click = "^7.1"
voluptuous = "^0.11.7"
unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]
isort = "^5.4"
flake8 = "^3.8"
black = "=20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
