[tool.poetry]
name = "repertoire"
version = "0.1.0"
description = "A release-oriented music server."
authors = ["azuline <azuline@riseup.net>"]
license = "AGPL-3.0"
packages = [
	{ include = "backend" },
]

[tool.poetry.scripts]
repertoire = "backend.__main__:run"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
click = "^7.1"
dataclasses-json = "^0.5.2"
flask = "^1.1"
huey = "^2.3"
gevent = "^20.6"
pillow = "^7.2.0"
requests = "^2.24"
tagfiles = "^0.3.1"
unidecode = "^1.1.1"
voluptuous = "^0.11.7"
yoyo-migrations = "^7.2"

[tool.poetry.dev-dependencies]
black = "=20.8b1"
flake8 = "^3.8"
flask-cors = "^3.0.8"
isort = "^5.4"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
snapshottest = "^0.6.0"
sphinx = "^3.2.1"
sphinx_rtd_theme = "^0.5.0"
sphinx-autodoc-typehints = "^1.11.1"
mypy = "^0.790"

[tool.black]
line-length = 88
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
	| snapshots
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
